Se ponen botones

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
         <div class="counter_container">
             <h1>soy el counter</h1>
+            <p id="contador">contador va aqui</p>
+            <div class="buttons">
+                <button> Disminuir </button>
+                <button> Aumentar </button>
+            </div>
+
+
+
         </div>
 
 
