Se añade el cuadro del counter

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
         <div class="counter_container">
-            <h1>soy el counter</h1>
-            <p id="contador">contador va aqui</p>
-            <div class="buttons">
-                <button> Disminuir </button>
-                <button> Aumentar </button>
-            </div>
+            <h1>Contador.</h1>
+            <!-- El contador va aquí -->
+            <p id="counterParagraph">0</p>
 
+            <div class="buttons">
+                <button class="counterButton" id="decrease"> Disminuir </button>
+                <button class="counterButton" id="stop"> Detener </button>
+                <button class="counterButton" id="increase"> Aumentar </button>
+
+                
+            </div>
 
 
         </div>
