Se termina la parte 1, contador

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="counter_container">
             <h1>Contador.</h1>
             <!-- El contador va aquí -->
-            <p id="counterParagraph">0</p>
+            <p id="counterParagraph"></p>
 
             <div class="buttons">
-                <button class="counterButton" id="decrease"> Disminuir </button>
-                <button class="counterButton" id="stop"> Detener </button>
-                <button class="counterButton" id="increase"> Aumentar </button>
+                <button class="counterButton" id="decrease">Disminuir</button>
+                <button class="counterButton" id="stop">Detener</button>
+                <button class="counterButton" id="increase">Aumentar</button>
 
                 
             </div>
