--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
                 <button class="counterButton" id="decrease">Disminuir</button>
                 <button class="counterButton" id="stop">Detener</button>
                 <button class="counterButton" id="increase">Aumentar</button>
-
-                
             </div>
-
-
         </div>
 
 
         <div class="timer_container">
-            <h1>soy el timer</h1>
+            <h1>Temporizador</h1>
+
+            <!-- El contador va aquí -->
+            <p id="timerParagraph"></p>
+            <p>Inserte el tiempo (s): </p>
+            <input type="text" id="time">
+            
         </div>
 
 </body>
